# netket

./: .gitignore  CMakeLists.txt  README.md  Singularity  postBuild  setup.py
Sources/: common_types.hpp  nqs.hpp  pynqs.cc
Sources/Dynamics/: exact_time_propagation.hpp  py_dynamics.cpp  py_dynamics.hpp
Sources/Dynamics/TimeStepper/: abstract_time_stepper.hpp  controlled_time_steppers.hpp  explicit_time_steppers.hpp
Sources/Graph/: abstract_graph.cc  abstract_graph.hpp  abstract_graph.ipp  custom_graph.cc  custom_graph.hpp  graph.hpp  hypercube.cc  hypercube.hpp  lattice.cc  lattice.hpp  py_graph.cc  py_graph.hpp
Sources/GroundState/: ground_state.hpp  py_exact.hpp  py_ground_state.hpp  py_variational_montecarlo.hpp  variational_montecarlo.hpp
Sources/Headers/: welcome.hpp
Sources/Hilbert/: abstract_hilbert.hpp  bosons.cc  bosons.hpp  custom_hilbert.cc  custom_hilbert.hpp  hilbert.hpp  hilbert_index.cc  hilbert_index.hpp  py_hilbert.cc  py_hilbert.hpp  spins.cc  spins.hpp
Sources/Machine/: abstract_machine.cc  abstract_machine.hpp  ffnn.hpp  jastrow.cc  jastrow.hpp  jastrow_symm.cc  jastrow_symm.hpp  machine.hpp  mps_periodic.cc  mps_periodic.hpp  py_abstract_machine.cc  py_abstract_machine.hpp  py_machine.cc  py_machine.hpp  rbm_multival.cc  rbm_multival.hpp  rbm_nqs.cc  rbm_nqs.hpp  rbm_spin.cc  rbm_spin.hpp  rbm_spin_phase.cc  rbm_spin_phase.hpp  rbm_spin_real.cc  rbm_spin_real.hpp  rbm_spin_symm.cc  rbm_spin_symm.hpp
Sources/Machine/DensityMatrices/: abstract_density_matrix.hpp  density_matrix_machine.hpp  diagonal_density_matrix.hpp  ndm_spin_phase.hpp  py_density_matrix.hpp  py_diagonal_density_matrix.hpp  py_ndm_spin_phase.hpp
Sources/Machine/Layers/: abstract_layer.hpp  activation_layer.hpp  activations.hpp  fullconn_layer.hpp  hypercube_conv_layer.hpp  layer.hpp  py_layer.hpp  sum_output.hpp
Sources/NQS/: nqs.hpp  py_nqs.hpp
Sources/Operator/: abstract_operator.cc  abstract_operator.hpp  bosonhubbard.hpp  graph_operator.hpp  local_operator.hpp  operator.hpp  py_bosonhubbard.hpp  py_graph_operator.hpp  py_local_operator.hpp  py_operator.hpp
Sources/Optimizer/: abstract_optimizer.hpp  ada_delta.hpp  ada_grad.hpp  ada_max.hpp  ams_grad.hpp  matrix_replacement.hpp  momentum.hpp  optimizer.hpp  py_ada_delta.hpp  py_ada_grad.hpp  py_ada_max.hpp  py_ams_grad.hpp  py_momentum.hpp  py_optimizer.hpp  py_rms_prop.hpp  py_sgd.hpp  rms_prop.hpp  sgd.hpp  stochastic_reconfiguration.hpp
Sources/Output/: json_output_writer.hpp  py_output.hpp
Sources/Sampler/: abstract_sampler.hpp  custom_sampler.hpp  custom_sampler_pt.hpp  exact_sampler.hpp  metropolis_exchange.hpp  metropolis_exchange_pt.hpp  metropolis_hamiltonian.hpp  metropolis_hamiltonian_pt.hpp  metropolis_hop.hpp  metropolis_local.hpp  metropolis_local_gate.hpp  metropolis_local_hadamard.hpp  metropolis_local_pt.hpp  py_custom_sampler.hpp  py_custom_sampler_pt.hpp  py_exact_sampler.hpp  py_metropolis_exchange.hpp  py_metropolis_exchange_pt.hpp  py_metropolis_hamiltonian.hpp  py_metropolis_hamiltonian_pt.hpp  py_metropolis_hop.hpp  py_metropolis_local.hpp  py_metropolis_local_pt.hpp  py_sampler.hpp  sampler.hpp  vmc_sampling.cc  vmc_sampling.hpp
Sources/Stats/: binning.hpp  obs_manager.hpp  onlinestat.hpp  py_stats.hpp  stats.hpp
Sources/Supervised/: py_supervised.hpp  supervised.hpp
Sources/Unsupervised/: py_unsupervised.hpp  quantum_state_reconstruction.hpp
Sources/Utils/: all_utils.hpp  array_hasher.hpp  array_search.hpp  array_utils.hpp  exceptions.hpp  json_utils.cc  json_utils.hpp  kronecker_product.hpp  lookup.hpp  math_helpers.hpp  memory_utils.hpp  messages.hpp  mpi_interface.cc  mpi_interface.hpp  next_variation.hpp  parallel_utils.hpp  py_utils.cc  py_utils.hpp  pybind_helpers.hpp  random_utils.hpp  stopwatch.hpp
Test/: CMakeLists.txt
Test/Dynamics/: test_dynamics.py  unit-timeevolution.cpp
Test/Graph/: test_graph.py
Test/GroundState/: exact_diagonalization_input_tests.hpp  test_groundstate.py  test_vmc.py  unit-exact-diagonalization.cc
Test/Hamiltonian/: hamiltonian_input_tests.hpp  unit-hamiltonian.cc  unit-matrixwrapper.cc
Test/Hilbert/: test_hilbert.py
Test/Machine/: layer_input_tests.hpp  machine_input_tests.hpp  test_machine.py  unit-activation.cc  unit-layer.cc  unit-machine.cc
Test/Observable/: observable_input_tests.hpp  unit-observable.cc
Test/Operator/: test_local_operator.py  test_operator.py
Test/Optimizer/: optimizer_input_tests.hpp  unit-optimizers.cc
Test/Sampler/: test_sampler.py
Test/Stats/: unit-stats.cc
Test/Utils/: unit-utils.cc
nqs/: __init__.py  dynamics.py  exact.py  graph.py  hilbert.py  layer.py  machine.py  nqs.py  operator.py  optimizer.py  output.py  sampler.py  stats.py  supervised.py  unsupervised.py  utils.py  variational.py
scripts/: bell.py  bell.qc  controlled-z-test.py  debug_circuit.py  evaluate_experiments.py  evaluation.py  experiments.py  experiments_settings.py  in.qc  qasm_reader.py  random_circuit.py  toffoli.py  toffoli.qc  toffolli.py
scripts/qupy/: operator.py
